--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -69,7 +69,7 @@ Diese Operation ermittelt, ob es schon eine Referenz auf einen Einheitentyp mit 
 
 \subsubsection{Units}
 Fachlich gesehen können Einheiten (\term{Units}) von Quantitäten angenommen werden und sind in Einheitentypen typisiert (siehe \refImg{klassendiagramm_unit}).
-Dabei wird zwischen atomaren Einheiten (z.~B. Meter $m$) und zusammengesetzten Einheiten (z.~B. Kilometer pro Stunde $\frac{km}{h}$]) unterschieden.
+Dabei wird zwischen atomaren Einheiten (z.~B. Meter $m$) und zusammengesetzten Einheiten (z.~B. Kilometer pro Stunde $\frac{km}{h}$) unterschieden.
 
 \subsubsubsection{Objektmodell}
 
