--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
@@ -122,7 +122,7 @@ Der \term{AccountTypeManager} dient zur Erstellung von \term{AccountTypes} und b
 
 Im \MM besitzt der \term{AccountTypeManager} die folgende Assoziation.
 \begin{description}
-	\item[AccountType** accountTypes] Beschreiben
+	\item[AccountType** accountTypes] Beinhaltet alle \term{AccountTypes} des Modells.
 \end{description}
 
 Hinzu kommt die folgende Operation, welche zum Befüllen der o.g. Liste dient.
