alles gute sind drei...
git-svn-id: file:///home/nik/repositories/svn/master@744 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
@@ -41,20 +41,20 @@ Die Bezeichnung der Operation wird über den dritten Parameter \textbf{(name)} f
 Zur Definition der Parameterliste der zu erstellenden Operation dient der vierte Parameter \textbf{(fp).}
 Wie bei den meisten Klassen dieses Projekts, die eine Bezeichnung haben, dürfen auch Operationsnamen nicht mehrfach verwendet werden. Beim Versuch zwei Operationen mit identischem Namen anzulegen, wird eine \emph{DoubleDefinitionException} erzeugt und die Erstellung wird abgebrochen.
 \item[createStaticOperation]
-Diese Operation bietet dem Anwender eine komfortable Möglichkeit eine statische Operation zu erstellen. Die Quell-Assoziation wird dazu auf EmptyTypeDisjunction gesetzt und es ist nur noch \textbf{der Rückgabetyp, der Name und die Parameterliste} auswählbar. Durch die Delegation gelten exakt die gleichen Konsistenzbedingungen wie beim Erstellen eine Operation (createOperation).
+Diese Operation bietet dem Anwender eine komfortable Möglichkeit eine statische Operation zu erstellen. Die Quell-Assoziation wird dazu auf \term{EmptyTypeDisjunction} gesetzt und es ist nur noch \textbf{der Rückgabetyp, der Name und die Parameterliste} auswählbar. Durch die Delegation gelten exakt die gleichen Konsistenzbedingungen wie beim Erstellen eine Operation (\term{createOperation}).
 \item[createConstant]
-Mithilfe dieser Operation ist es dem Anwender möglich auf einfache Art eine Konstante zu erstellen. Da eine Konstante eine Operation ist, die eine leere Parameterliste hat und als Quelle auf EmptyTypeDisjunction verweist, sind das genau die Parameter die beim Aufruf nicht mehr angegeben werden müssen bzw. können. Auch hierbei handelt es sich um Delegation an die createOperation-Operation und es gelten genau die gleichen Konsistenzbedingungen.
+Mithilfe dieser Operation ist es dem Anwender möglich auf einfache Art eine Konstante zu erstellen. Da eine Konstante eine Operation ist, die eine leere Parameterliste hat und als Quelle auf \term{EmptyTypeDisjunction} verweist, sind das genau die Parameter die beim Aufruf nicht mehr angegeben werden müssen bzw. können. Auch hierbei handelt es sich um Delegation an die \term{createOperation}-Operation und es gelten genau die gleichen Konsistenzbedingungen.
 \item[createVoidOperation]
-Die createVoid-Operation ist die vorerst letzte Operation zum benutzerfreundlicheren Erstellen einer Operation. Anders als bei den zwei Operationen zuvor, sind hier Quelle und Parameterliste wählbar. Da die zu erstellende Operation aber keinen Rückgabetypen haben soll, ist das Ziel vordefiniert und kann vom Anwender beim Aufruf nicht angegeben werden. Genau wie zuvor gelten auch hier die Konsistenzbedingungen der createOperation-Operation.
+Die \term{createVoid}-Operation ist die vorerst letzte Operation zum benutzerfreundlicheren Erstellen einer Operation. Anders als bei den zwei Operationen zuvor, sind hier Quelle und Parameterliste wählbar. Da die zu erstellende Operation aber keinen Rückgabetypen haben soll, ist das Ziel vordefiniert und kann vom Anwender beim Aufruf nicht angegeben werden. Genau wie zuvor gelten auch hier die Konsistenzbedingungen der \term{createOperation}-Operation.
 \item[createFormalParamater]
-Um Formalparameter für Operationen verwenden zu können, müssen diese zuvor erstellt werden. Genau hierfür wird dem Anwender die createFormalParameter-Operation angeboten.
-Zum erfolgreichem Erstellen eines Formalparameters ist es notwendig, diesem einen \textbf{Namen} sowie einen \textbf{Typen} zu geben. Nach erfolgreicher Erstellung ist der erstellte Formalparameter in der zuvor beschriebenen Formalparameter-Liste zu finden. Die Erstellung kann entweder an der mehrfachen Verwendung des Formalparameter-Namens oder der Typisierung des Parameters in EmptyTypeDisjunktion scheitern. Im ersten Fall wird eine \emph{DoubleDefinitionException} erstellt, im Zweiten eine \emph{ConsistencyException} wobei beide Exceptions zum Abbruch führen.
+Um Formalparameter für Operationen verwenden zu können, müssen diese zuvor erstellt werden. Genau hierfür wird dem Anwender die \term{createFormalParameter}-Operation angeboten.
+Zum erfolgreichem Erstellen eines Formalparameters ist es notwendig, diesem einen \textbf{Namen} sowie einen \textbf{Typen} zu geben. Nach erfolgreicher Erstellung ist der erstellte Formalparameter in der zuvor beschriebenen Formalparameter-Liste zu finden. Die Erstellung kann entweder an der mehrfachen Verwendung des Formalparameter-Namens oder der Typisierung des Parameters in \term{EmptyTypeDisjunktion} scheitern. Im ersten Fall wird eine \emph{DoubleDefinitionException} erstellt, im Zweiten eine \emph{ConsistencyException} wobei beide Exceptions zum Abbruch führen.
 \item[addFormalParameter]
-Um Formalparameter nachträglich einer Operation zuzuweisen, benötigt diese Operation sowohl die \textbf{Operation} an sich als auch den hinzuzufügenden \textbf{Formalparameter.} Sollte dieser Formalparameter nicht schon in der Formalparameterliste der gewählten Operation sein, wird dieser hinzugefügt. Im anderen Fall wird eine \emph{ConsistencyExceptionException} erstellt und der Vorgang wird abgebrochen.
+Um Formalparameter nachträglich einer Operation zuzuweisen, benötigt diese Operation sowohl die \textbf{Operation} an sich als auch den hinzuzufügenden \textbf{Formalparameter.}. Sollte dieser Formalparameter nicht schon in der Formalparameterliste der gewählten Operation sein, wird dieser hinzugefügt. Im anderen Fall wird eine \emph{ConsistencyExceptionException} erstellt und der Vorgang wird abgebrochen.
 \item[addMultipleFormalParameter]
 Diese Operation dient dem Zweck eine Liste von Formalparametern der gewählten Operation zuzuweisen.
 Zu diesem Zweck ist es notwenig die \textbf{Liste von Formalparametern} sowie 
-die gewählte \textbf{Operation} an die addMultipleFormalparameter-Operation zu übergeben. 
+die gewählte \textbf{Operation} an die \term{addMultipleFormalparameter}-Operation zu übergeben. 
 Aufgrund von Delegation gelten auch hier die Konsistenzbedingung der addFormalParamter-Operation. 
 \item[removeFormalParameterFromOperation]
 Wenn ein Formalparameter aus der Parameterliste einer Operation entfernt werden soll, stellt diese Operation die notwendige Funktionalität bereit. 
