--- a/public/doku/DokuQuanti/content/pages/Titelseite.tex
+++ b/public/doku/DokuQuanti/content/pages/Titelseite.tex
@@ -28,6 +28,6 @@
 	Business Process Engineering%
 }
 
-\titlepageBoxHeadline{Verfasst am:}{\submissionDate}
+\titlepageBoxHeadline{Verfasst im Zeitraum:}{13.04.2013 - 08.06.2013}
 
 \end{center}
