--- a/public/doku/DokuQuanti/content/sections/Einleitung.tex
+++ b/public/doku/DokuQuanti/content/sections/Einleitung.tex
@@ -1,8 +1,6 @@
 \section{Einleitung}
 
 Im Rahmen des Master Studiums (M.Sc. Studiengang: Business Process Engineering) an der FHDW Hannover
-war es für die Studiengruppe \qq{HFP412} Aufgabe ein \MM zu realisieren. Als Grundlage für das \MM diente zum einen das Werk 
-\qq{Analysis Patterns} \refLibLiteratur{fowler1997analysis} von Martin Fowler, welcher bereits in den 1990er Jahren wichtige Denkanstöße zur Metamodellierung gab. 
-Sowie zum anderen die Vorlesung und die damit verbundenen Unterlagen \refLibLiteratur{LoeweInfInfra} zum Thema \qq{Informationsinfrastrukturen} von Herrn Prof. Dr. Michael Löwe. 
+war es für die Studiengruppe \qq{HFP412} die Aufgabe, Inhalte und Hintergründe der Veranstaltung \qq{Quantitative Forschungsmethoden}\footnote{Dozentin: Frau Dr. Sylvie Gasnier} zu dokumentieren.
 
-Die vorliegende Ausarbeitung dokumentiert das Projekt \qq{\MM} und die damit verbundene Softwarelösung.
+Die vorliegende Ausarbeitung fasst die Mitschriften der Studiengruppe zusammen.
