--- a/privat/bjoern/DokuQuanti/content/pages/Titelseite.tex
+++ b/privat/bjoern/DokuQuanti/content/pages/Titelseite.tex
@@ -8,19 +8,12 @@
 
 \titlepageBoxHeadline{Fachhochschule für die Wirtschaft Hannover}{-- FHDW --}
 
-\titlepageBoxHeadline{Mitschriften der Vorlesung}{\textbf{Quantitative Forschungsmethoden}}
+\titlepageBoxHeadline{Mitschrift der Vorlesung vom 13.04.2013}{\textbf{Quantitative Forschungsmethoden}}
+\titlepageBoxHeadline{Thema}{\textbf{Nominale und ordinale Merkmale}}
+
 
 \titlepageBoxHeadline{Verfasser:}{
-	Alexander Bellhäuser,
-	Björn Bodensieck,\\
-	Malte Kastner,
-	Thimo Koenig,\\
-	Stefan Pietsch,
-	Stefanie Rademacker,\\
-	Marius Tempelmeier,
-	Niklas Walter,\\
-	Christin Weckbrod,
-	Patrick Wolf
+	Björn Bodensieck
 }
 
 \titlepageBoxHeadline{2. Theoriequartal}{%
@@ -28,6 +21,6 @@
 	Business Process Engineering%
 }
 
-\titlepageBoxHeadline{Verfasst im Zeitraum:}{13.04.2013 - 08.06.2013}
+\titlepageBoxHeadline{Eingereicht am:}{13.04.2013}
 
 \end{center}
