--- a/privat/bjoern/DokuQuanti/content/sections/Einleitung.tex
+++ b/privat/bjoern/DokuQuanti/content/sections/Einleitung.tex
@@ -3,4 +3,4 @@
 Im Rahmen des Master Studiums (M.Sc. Studiengang: Business Process Engineering) an der FHDW Hannover
 war es für die Studiengruppe \qq{HFP412} die Aufgabe, Inhalte und Hintergründe der Veranstaltung \qq{Quantitative Forschungsmethoden}\footnote{Dozentin: Frau Dr. Sylvie Gasnier} zu dokumentieren.
 
-Die vorliegende Ausarbeitung fasst die Mitschriften der Studiengruppe zusammen.
+Die vorliegende Ausarbeitung befasst sich mit dem Thema \qq{Nominale und ordinale Merkmale}. 
