--- a/privat/bjoern/DokuQuanti/content/sections/Protokoll_Bjoern.tex
+++ b/privat/bjoern/DokuQuanti/content/sections/Protokoll_Bjoern.tex
@@ -1,26 +1,24 @@
-\section{Nominale und ordinale Merkmale (13.04.2013, B. Bodensieck)}
-Allgemeines Geplänkel zum Thema nominale und ordinale Merkmale\ldots
+
+\section{Nominale Merkmale}
+Allgemeines Geplänkel zum Thema nominale Merkmale\ldots
+
+\subsection{Häufigkeitstabelle}
+
+\subsection{Darstellung als Diagramm}
+
+\subsection{Messzahlen / Kennzahlen}
 
 
-\subsection{Nominale Merkmale}
+\section{Ordinale Merkmale}
+Allgemeines Geplänkel zum Thema ordinale Merkmale\ldots
+\subsection{Häufigkeitstabelle}
 
-\subsubsection{Häufigkeitstabelle}
-
-\subsubsection{Darstellung als Diagramm}
-
-\subsubsection{Messzahlen / Kennzahlen}
-
-
-\subsection{Ordinale Merkmale}
-
-\subsubsection{Häufigkeitstabelle}
-
-\subsubsection{Darstellung als Diagramm}
+\subsection{Darstellung als Diagramm}
 Darstellung der Häufigkeit (Balken- / Säulendiagramm)
 
 Darstellung der kumulierten Häufigkeit (Verteilfunktion: Treppenfunktion)
 
-\subsubsection{Messzahlen / Kennzahlen}
+\subsection{Messzahlen / Kennzahlen}
 
 Perzentile - Prozentpunkte (Quantile) als Lagemaße
 
