Anfang der Abschrift des handschriftlichen Protokolls.
git-svn-id: file:///home/nik/repositories/svn/master@759 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/privat/alex/tq1/projects/DokuQuanti/content/pages/Titelseite.tex
+++ b/privat/alex/tq1/projects/DokuQuanti/content/pages/Titelseite.tex
@@ -8,12 +8,12 @@
 
 \titlepageBoxHeadline{Fachhochschule für die Wirtschaft Hannover}{-- FHDW --}
 
-\titlepageBoxHeadline{Mitschrift der Vorlesung vom 13.04.2013}{\textbf{Quantitative Forschungsmethoden}}
-\titlepageBoxHeadline{Thema}{\textbf{Nominale und ordinale Merkmale}}
+\titlepageBoxHeadline{Mitschrift der Vorlesung}{\textbf{Quantitative Forschungsmethoden}}
+\titlepageBoxHeadline{Thema}{\textbf{Protokoll vom 18.05.2013}}
 
 
 \titlepageBoxHeadline{Verfasser:}{
-	Björn Bodensieck
+	Niels Alexander Bellhäuser
 }
 
 \titlepageBoxHeadline{2. Theoriequartal}{%
@@ -21,6 +21,6 @@
 	Business Process Engineering%
 }
 
-\titlepageBoxHeadline{Eingereicht am:}{13.04.2013}
+\titlepageBoxHeadline{Eingereicht am:}{\today}
 
 \end{center}
