--- a/privat/bjoern/DokuQuanti/content/sections/Protokoll_Bjoern.tex
+++ b/privat/bjoern/DokuQuanti/content/sections/Protokoll_Bjoern.tex
@@ -1,16 +1,104 @@
-
 \section{Nominale Merkmale}
-Allgemeines Geplänkel zum Thema nominale Merkmale\ldots
+
+\todo[Umformulieren]
+(1) Nominalskala: Dient lediglich der Klassifikation und Identifikation von Untersuchungsobjekten (z.B. Geschlecht: 1: männlich, 2: weiblich). 
+Die Analyse nominalskalierter Daten beschränkt sich auf Häufigkeitsanalysen. Vgl. http://wirtschaftslexikon.gabler.de/Definition/skalenniveau.html
+\todo[Umformulieren]
+Skala, bei der alternative Ausprägungen nur deren Verschiedenheit zum Ausdruck bringen; 
+z.B. besitzen die Merkmale Geschlecht oder Fakultätszugehörigkeit bei Studierenden eine Nominalskala.
+Vgl. http://wirtschaftslexikon.gabler.de/Definition/nominalskala.html
+\todo[Umformulieren]
+Ein Merkmal skaliert nominal (v. lat. nomen \qq{Name} aus griech. onoma; Pl.: Nomina, auch Nomen), 
+wenn seine möglichen Ausprägungen zwar unterschieden werden können, aber keine natürliche Rangfolge aufweisen.
+\todo[Umformulieren]
+Ein nominal skalierendes Merkmal wird messbar gemacht durch eine Beschreibung von Kategorien,
+nach der jede Untersuchungseinheit (genau) einer Kategorie zugeordnet werden kann. 
+Das Ergebnis einer solchen Operationalisierung heißt dann eine Nominalskala. 
+Wegen des Fehlens der Ordnung ist dabei -skala (von lat. scalae ‚Leiter, Treppe‘) eigentlich nicht angemessen und 
+ist im Zusammenhang mit den anderen Skalenniveaus zu sehen.
+
+
+Die formalen Bedingungen einer Nominalskala sind:
+\begin{description}
+\item[Reflexivität] $a \sim a$. Jedes Objekt ist zu sich selbst äquivalent.
+\item[Symmetrie] $a \sim b \implies b \sim a$. Wenn $a$ zu $b$ äquivalent ist, dann ist auch $b$ äquivalent zu $a$ (und umgekehrt).
+\item[Transitivität] $a \sim b \land b \sim c \implies a \sim c$. Wenn $a$ zu $b$ äquivalent und $b$ zu $c$ äquivalent ist, dann ist $a$ äquivalent zu $c$.
+\item[Homomorphie] \todo[Umformulieren] Die Beschreibung der Kategorien muss so sein, dass die dadurch definierte Abbildung strukturerhaltend (homomorph) ist, dass also gleiche Objekte des empirischen Relativs einer Kategorie zugeordnet werden und ungleiche Objekte verschiedenen Kategorien.
+\end{description}
+
+
+
+
+
+
+
+
+
+Vgl. https://de.wikipedia.org/wiki/Nominalskala
+
+\todo[Einbauen]
+Beispiele für nominalskalierte Merkmale eines Menschen:
+Geschlecht: männlich, weiblich
+Geburtsort: Hamburg, Berlin, Heidenheim
+Religionszugehörigkeit: evangelisch, katholisch, muslimisch
+
+
 
 \subsection{Häufigkeitstabelle}
 
 \subsection{Darstellung als Diagramm}
+Kreisdiagramm
+Balkendiagramm Quatsch (erklären warum\ldots)
 
 \subsection{Messzahlen / Kennzahlen}
 
 
 \section{Ordinale Merkmale}
-Allgemeines Geplänkel zum Thema ordinale Merkmale\ldots
+\todo[Umformulieren]
+(2) Ordinalskala: Diese ordnet die Untersuchungsobjekte nach ihrem Rang (z.B. Rating A ist besser als Rating B), sagt jedoch nichts über das Ausmaß der Unterschiede aus. Zulässige mathematische Operationen bei ordinalskalierten Daten sind bspw. die Berechnung des Modus und des Medians.
+Vgl. http://wirtschaftslexikon.gabler.de/Definition/skalenniveau.html
+
+Kurzerklärung:
+Möglichkeit der Reihung verschiedener Messgrößen.
+
+Ausführliche Erklärung:
+Rangskala; Skala, auf der alternative Ausprägungen neben Verschiedenheit auch eine Rangordnung zum Ausdruck bringen, z.B. Schulnote oder Intelligenzquotient.
+Vgl. http://wirtschaftslexikon.gabler.de/Definition/ordinalskala.html
+
+\todo[Umformulieren]
+Die Ordinalskala dient in der Statistik der Charakterisierung von (Zufalls-)Variablen mit Ausprägungen, zwischen denen eine natürliche Rangordnung besteht.[1] Ordinal-Variablen enthalten also Nominal-Informationen und auch Informationen über die Reihung (Ordnung) der Variablenwerte. Beobachtungen auf einem Merkmal mit ordinalem Messniveau können hinsichtlich dieses Merkmals gruppiert und ihrer Größe nach geordnet werden.
+Werden die Merkmalsausprägungen (Kategorien) mit (Rang-)Zahlen (Ordnungsziffern) bezeichnet, werden diese so gewählt, dass die Rangfolge der Zahlen der Rangfolge der Ausprägungen entspricht. D. h. eine Beobachtung bzw. ein Objekt mit einem höheren Rang besitzt auch eine höhere Ausprägung auf dem betrachteten Merkmal als eine Beobachtung mit einem niedrigeren Rang. Über die Größe des Merkmalsunterschieds zwischen den Objekten, d. h. die Abstände zwischen den Rangplätzen, lässt sich aber keine Aussage machen.
+
+
+Zusätzlich zu den Bedingungen zur Konstruktion einer Nominalskala erfordert die Konstruktion einer Ordinalskala die Eigenschaft der Trichotomie (Dreiteilung)\footnote{Diese Eigenschaft gilt in jeder total geordneten Menge.}:
+\begin{description}
+	\item[Trichotomie] Es gilt eine der folgenden Eigenschaften:
+		\begin{itemize}
+		  \item $a < b$
+		  \item $a = b$
+		  \item $a > b$ 
+		\end{itemize} 
+\end{description}
+
+
+
+
+\todo[Einbauen]
+Nachfolgende Tabelle enthält Beispiele für ordinalskalierte Merkmale.
+Merkmal	Kategorien
+Dekubitusrisiko	geringes bis hohes Risiko nach der Norton-Skala
+Zufriedenheit mit einem Produkt	sehr zufrieden > eher zufrieden > eher unzufrieden > sehr unzufrieden
+Selbsteinstufung des Einkommens1	hoch > mittel > niedrig
+Schulische Leistung2	sehr gut > gut > befriedigend > ausreichend > mangelhaft > ungenügend
+Dienstrang beim Militär	General > Major > Leutnant > Feldwebel > Unteroffizier > Gefreiter
+1 Wird das Einkommen in Klassen eingeteilt (z. B. 0 bis 999 Euro, 1000 bis 2000 Euro, über 2000 Euro), handelt es sich um ein ordinal skaliertes Merkmal. Wird dagegen der genaue Betrag erhoben und statistisch verarbeitet, liegt ein metrisches Merkmal vor. Da die Auskunftsbereitschaft bei der Angabe des genauen Einkommens geringer ist, wird in vielen Umfragen auf eine Abfrage der Einkommensklassen zurückgegriffen.
+2 Schulnoten werden oft so verwendet, als seien sie intervallskaliert, indem z. B. der Durchschnitt berechnet wird. Problematisch wird es, wenn eine solche Verwendung ernste Konsequenzen hat, z. B. bei der Beurteilung verschiedener Unterrichtsmethoden.
+
+
+
+Vgl. https://de.wikipedia.org/wiki/Ordinalskala 	
+
+
 \subsection{Häufigkeitstabelle}
 
 \subsection{Darstellung als Diagramm}
